/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.11.1/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
    id 'org.panteleyev.jpackageplugin' version '1.6.0'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use JUnit test framework.
    testImplementation libs.junit

    // This dependency is used by the application.
    implementation project(':mcport')
    implementation libs.guava
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

application {
    // Define the main class for the application.
    mainClass = 'io.github.yappy.App'
    applicationDefaultJvmArgs = ['--add-opens=java.base/java.lang=ALL-UNNAMED']
}

def git(...args) {
    def proc = "git ${args.join(' ')}".execute()
    proc.waitFor()
    return proc.text.trim()
}

ext.versionDescribe = git('describe', '--tags', '--always', '--dirty').trim()
ext.versionBranch = git('symbolic-ref', 'HEAD').trim()
ext.versionHashfull = git('show', 'HEAD', '--no-patch', '--pretty=format:%H').trim()
ext.versionDate = git('show', 'HEAD', '--no-patch', '--pretty=%as')
version = versionDescribe
// Debian package (*.deb) version
def debVerMatch = versionDescribe =~ /\d+(?:\.\d+)*/
ext.debVersion = debVerMatch ? debVerMatch[0] : '0.1.0'

task generateVersionFile {
    def versionFile = file("$buildDir/generated/resources/version.properties")
    inputs.property 'versionDescribe', versionDescribe
    inputs.property 'versionBranch', versionBranch
    inputs.property 'versionHashfull', versionHashfull
    inputs.property 'versionDate', versionDate
    outputs.file versionFile
    doLast {
        versionFile.text = """\
            versionDescribe = $versionDescribe
            versionBranch   = $versionBranch
            versionHashfull = $versionHashfull
            versionDate     = $versionDate
            """.stripIndent()
    }
}

processResources {
    dependsOn generateVersionFile
    from "$buildDir/generated/resources"
}

jar {
    manifest {
        attributes(
            'Implementation-Version' : version
        )
    }
}

task("copyDependencies", type: Copy) {
    from(configurations.runtimeClasspath).into("$buildDir/jars")
}

task("copyJar", type: Copy) {
    from(tasks.jar).into("$buildDir/jars")
}

jpackage {
    dependsOn("build", "copyDependencies", "copyJar")

    input  = "$buildDir/jars"
    destination = "$buildDir/pkg"

    mainJar = tasks.jar.archiveFileName.get()
    mainClass = application.mainClass.get()
    javaOptions = application.applicationDefaultJvmArgs

    // --name
    appName = 'mcdesktop'
    // --app-version = version (default)
    copyright = 'Copyright (c) 2021-2025 yappy'
    // --description
    appDescription = 'Masao Construction Desktop'
    // icon = ''
    // --vendor
    vendor = "yappy"

    // --about-url
    aboutUrl = 'https://github.com/yappy/MasaoMakerSP'
    // --app-image
    // appImage = ''
    // --license-file
    licenseFile = "$rootDir/LICENSE"
    // --runtime-image
    // runtimeImage = ''

    //verbose = true

    linux {
        type = 'deb'
        appVersion = debVersion
    }
}
